add a new configuration property named search_amount

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 input_file_path_name=src/main/resources/input.txt
 trie_file_path_name=src/main/resources/trie_tree.txt
-pairAmount=20000
-maxStringLength=15
+search_amount=10
+pair_amount=20000
+maxString_length=15
+max_score=10000
